--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "redirects": [
+  "redirects": [{"source": "/",       "destination": "/privacy-policy",       "permanent": true     }, {"source": "/",       "destination": "/privacy-policy",       "permanent": true     }
 ],
   "rewrites": [
     {
